2010-08-16 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.30
	* changed all tokens to B256... in lex folder to stop conflicts with windows wtypes.h
	* work on porting to winsock (Windows) - have functioning well enough to test
	* changed net commands to act like file io commands and allow up to 8 open
	- sockets 0-7 with 0 being the default.
	
2010-08-15 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.29
	* cleaned up socket release (close)
	* added NETDATA function to return true if data is waiting to be received

2010-08-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.28
	* added first attempt at networking statements
        - statements NETLISTEN, NETCONNECT, NETREAD, NETOPEN, and NETCLOSE
	* added new networking folder to Examples with a few test programs
	* not compiled or tested in Windows yet.

2010-08-09 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.27
	* fixed string comparison problem caused since 0.9.6h

2010-08-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6z
	* Rewrote the error messaging process to allow for error trapping and reporting logic in BASIC code
	* added ONERROR label to jump to a subroutine to handle errors
	* added LASTERROR, LASTERRORMESSAGE, LASTERRORLINE, and LASTERROREXTRA functions that describe last runtime error
	* added OFFERROR statement to restore default error handling - fail on error
	* changed parser to allow labels at the begining of any line or on a line by themselves
	* added display of column number of cursor in status bar when editing
	* added _ as a valid character in a veriable or label name (first letter MUST still be a letter)

2010-08-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6y
	* Added sqLite database processing - dbopen, dbclose, dbsetopen, dbsetclose, and dbexecute statements.
		also dbint, dbfloat, dbstring, and dbrow functions to manipulate recordsets

2010-07-27 j.m.reneau <renejm@users.sourceforge.net> 0.9.6x